admission/ValidatingAdmissionPolicy/policies/selinux-user/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selinux-user-initcontainers
  annotations:
    kubeapt.io/uuid: "d5bee2cb-ed90-456c-979d-05406f316b90"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
